--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "vitepress dev docs",
     "build": "vitepress build docs",
     "serve": "vitepress serve docs",
-    "pages": "npm run build && bash scripts/deploy-gh.sh"
+    "pages": "bash scripts/deploy-gh.sh"
   },
   "license": "ISC",
   "dependencies": {
